apps/prod/authelia/ingress.yaml
# /apps/prod/authelia/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-ingress
  namespace: auth
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`auth.nmsny.dev`)
    kind: Rule
    services:
    - name: authelia
      port: 80
